[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "dx"
author = "nteract"
author-email = "carolcode@willingconsulting.com"
home-page = "https://github.com/nteract/dx"
description-file = "README.md"
requires = [
    "jsonschema",
    "pandas"
]
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
dist-name = "dx"
include = [
    "LICENSE"
]


[tool.flit.metadata.requires-extra]
dev = [
    "black",
    "flit",
    "isort",
    "pre-commit",
    "pytest",
    "tox"
]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]
doc = ["sphinx"]


[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''

[tool.isort]
profile = "black"
multi_line_output = 3

# tox.ini
[tox]
isolated_build = True